# nexus

./: .gitignore  .gitmodules  .release-plz.toml  .sops.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  audit.toml  clippy.toml  deny.toml  flake.nix  fly.toml  release-plz.toml  rust-toolchain.toml  taplo.toml  todo.org
bins/auth/: Cargo.toml  README.md  build.nix  http.org
bins/auth/src/: api.rs  application.rs  error.rs  main.rs  routes.rs  tracing.rs
bins/auth/src/api/: error.rs  health.rs  login.rs  mod.rs  register.rs  validations.rs
bins/auth/src/commons/: mod.rs  password_validation.rs
bins/auth/src/core/: commands.rs  error.rs  mod.rs
bins/auth/src/domain/: email.rs  hashed_password.rs  mod.rs  (+3 more)
bins/events/: CHANGELOG.md  Cargo.toml  build.nix
bins/events/src/: cache.rs  commander.rs  commands.rs  events.rs  events_v2.rs  main.rs  store.rs
bins/steersman/: Cargo.toml  build.nix
bins/steersman/src/: main.rs
bins/todo/: Cargo.toml
bins/todo/migrations/: V1__event.sql  V1__events.sql
bins/todo/src/: error.rs  events.rs  main.rs  store.rs
crates/cqrs/: Cargo.toml
crates/cqrs/src/: aggregate.rs  command.rs  error.rs  event.rs  lib.rs  mem_store.rs  service.rs  store.rs
crates/meow_diator/: Cargo.toml
crates/meow_diator/src/: lib.rs
crates/nexus/: CHANGELOG.md  Cargo.toml  README.md
crates/nexus-fjall/: CHANGELOG.md  Cargo.toml
crates/nexus-fjall/benches/: fjall_benchmarks.rs
crates/nexus-fjall/src/: all_stream.rs  all_subscription_stream.rs  builder.rs  encoding.rs  error.rs  global_seq.rs  lib.rs  partition.rs  plan.rs  scan.rs  snapshot.rs  store.rs  stream.rs  subscription_id.rs  subscription_stream.rs  wire_key.rs
crates/nexus-fjall/tests/: export_import_tests.rs  fjall_conformance.rs  metadata_roundtrip_tests.rs  military_break_everything.rs  nasa_break_everything.rs  property_tests.rs  resilience_tests.rs  shared_subscription_smoke.rs  snapshot_tests.rs  snapshot_wire_format.rs  state_machine_tests.rs  subscription_tests.rs
crates/nexus-framework/: CHANGELOG.md  Cargo.toml
crates/nexus-framework/src/: lib.rs
crates/nexus-framework/tests/: projection_runner_tests.rs  projection_tests.rs
crates/nexus-macros/: CHANGELOG.md  Cargo.toml  README.md
crates/nexus-macros/src/: command.rs  lib.rs  main.rs  utils.rs
crates/nexus-macros/tests/: adversarial_input.rs  aggregate_derive.rs  compile_fail_tests.rs  domain_event_enum.rs  expand_roundtrip.rs  macro_attrs_preserved.rs  macro_hygiene.rs  macro_property_tests.rs  transforms_derive.rs
crates/nexus-postgres/: CHANGELOG.md  Cargo.toml
crates/nexus-postgres/src/: builder.rs  error.rs  hex.rs  lib.rs  position.rs  schema.rs  store.rs  wake.rs
crates/nexus-postgres/tests/: all_noskip_tests.rs  conformance_tests.rs  subscription_tests.rs
crates/nexus-rusqlite/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/nexus-rusqlite/benches/: event_store_benchmark.rs
crates/nexus-rusqlite/src/: error.rs  store.rs
crates/nexus-rusqlite/tests/: common.rs  store_properties.proptest-regressions  store_properties.rs
crates/nexus-services/: CHANGELOG.md  Cargo.toml
crates/nexus-services/src/: generic.rs  lib.rs  mediator.rs  reject.rs
crates/nexus-store/: CHANGELOG.md  Cargo.toml
crates/nexus-store-testing/: CHANGELOG.md  Cargo.toml
crates/nexus-store-testing/src/: lib.rs
crates/nexus-store/benches/: store_bench.rs
crates/nexus-store/proptest-regressions/: import.txt
crates/nexus-store/src/: batch.rs  builder.rs  catchup.rs  cbor.rs  codec.rs  envelope.rs  error.rs  event_store.rs  export.rs  import.rs  lib.rs  notify.rs  portable.rs  projection.rs  raw.rs  repository.rs  saga.rs  snapshot.rs  state.rs  store.rs  stream.rs  stream_id.rs  stream_label.rs  subscription.rs  subscription_cursor.rs  testing.rs  upcaster.rs  upcaster_chain.rs  upcasting.rs  value.rs  wake.rs  wire.rs
crates/nexus-store/tests/: adversarial_property_tests.proptest-regressions  adversarial_property_tests.rs  adversarial_tests.rs  borrowing_codec_tests.rs  bounded_batch_proptest.rs  bug_hunt_tests.proptest-regressions  bug_hunt_tests.rs  codec_roundtrip_tests.rs  codec_tests.rs  combinator_tests.rs  envelope_tests.rs  error_tests.rs  event_store_tests.rs  futures_bridge_tests.rs  inmemory_conformance.rs  inmemory_store_tests.rs  integration_tests.rs  morsel_tests.rs  nasa_break_everything.rs  projection_runner_tests.rs  projection_tests.rs  property_tests.rs  raw_store_tests.rs  repository_qa_tests.proptest-regressions  repository_qa_tests.rs  saga_repository_tests.rs  schema_version_tests.rs  security_tests.rs  serde_codec_tests.rs  shared_subscription_smoke.rs  snapshot_integration_tests.rs  snapshot_tests.rs  static_assertions.rs  stream_alloc_tests.rs  stream_label_tests.rs  stream_tests.proptest-regressions  stream_tests.rs  subscription_tests.rs  upcaster_chain_tests.rs  upcaster_tests.rs  (+3 more)
crates/nexus-test-helpers/: Cargo.toml  README.md
crates/nexus-test-helpers/src/: lib.rs  pending_event.rs  pending_event_strategies.rs  user_domain.rs
crates/nexus/benches/: kernel_bench.rs
crates/nexus/src/: aggregate.rs  closing_the_books.rs  core.rs  domain_event.rs  error.rs  error_id.rs  event.rs  events.rs  id.rs  lib.rs  message.rs  saga.rs  store.rs  stream_id.rs  testing.rs  version.rs
crates/nexus/tests/: aggregate.rs  aggregate_fixture_tests.rs  command_handler.rs  kernel.rs  query_handler.rs  repository.rs  saga_fixture_tests.rs
crates/pawz/: Cargo.toml
crates/pawz/src/: body.rs  config.rs  error.rs  jsend.rs  lib.rs  payload.rs  payloads.rs  tracer.rs
crates/workspace-hack/: Cargo.toml
examples/closing-the-books/: Cargo.toml
examples/closing-the-books/src/: main.rs
examples/fjall-end-to-end/: Cargo.toml  README.md
examples/fjall-end-to-end/src/: domain.rs  lib.rs  main.rs
examples/projection-tokio/: Cargo.toml
examples/projection-tokio/src/: lib.rs  main.rs
examples/projection-tokio/tests/: loop_tests.rs
examples/store-and-kernel/: Cargo.toml
examples/store-and-kernel/src/: main.rs
(+490 files in other folders)
