[workspace]
resolver = "2"
members = [
    "crates/nexus",
    "crates/nexus-fjall",
    "crates/nexus-macros",
    "crates/nexus-macros/tests/cross_crate_test",
    "crates/nexus-postgres",
    "crates/nexus-store",
    "crates/nexus-store-testing",
    "crates/workspace-hack",
    "examples/closing-the-books",
    "examples/fjall-end-to-end",
    "examples/inmemory",
    "examples/projection-tokio",
    "examples/store-and-kernel",
    "examples/store-inmemory",
]

[workspace.dependencies]
aligned-vec = "=0.6.4"
arrayvec = { version = "0.7.6", default-features = false }
bytemuck = { version = "1", features = ["derive"] }
bytes = "1"
crc32c = "0.6.8"
criterion = { version = "0.8", features = ["html_reports"] }
fjall = { version = "3", features = ["bytes_1"] }
foldhash = "0.2.0"
futures = "0.3"
futures-core = { version = "0.3", default-features = false }
insta = "1.47.2"
minicbor = { version = "2.2.2", features = ["alloc"] }
parking_lot = "0.12.5"
proptest = "1.11.0"
proptest-state-machine = "0.8.0"
rkyv = "0.8"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "macros"] }
static_assertions = "1.1.0"
tempfile = "3"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
tokio-stream = "0.1"

[workspace.package]
version = "0.1.0"
edition = "2024"
# MSRV == the pinned toolchain (rust-toolchain.toml). Policy: pin tracks the
# latest stable we build/test against; bump both together. See issue #204.
rust-version = "1.95.0"
license = "MIT OR Apache-2.0"
authors = ["Joel DSouza <joel@devrandom.co>"]
repository = "https://github.com/devrandom-labs/nexus"

[workspace.lints.clippy]
# 1. THE FOUNDATION
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

# 2. THE RUTHLESS RESTRICTIONS
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
disallowed_methods = "deny"
disallowed_types = "deny"

# 3. MEMORY & PERFORMANCE STRICTNESS
clone_on_ref_ptr = "deny"
as_conversions = "deny"
str_to_string = "deny"
implicit_clone = "deny"

# 4. VARIABLE HYGIENE
shadow_reuse = "deny"
shadow_same = "deny"
shadow_unrelated = "deny"

# 5. THE "NO CHEATING" RULE
allow_attributes_without_reason = "deny"

[workspace.metadata.crane]
name = "nexus"
