[package]
name = "auth"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
axum = { workspace = true }
pawz = { path = "../../crates/pawz" }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["trace"] }
tracing = { workspace = true }
utoipa = { workspace = true, features = ["axum_extras", "debug"] }
utoipa-axum = { workspace = true, features = ["debug"] }
utoipa-swagger-ui = { workspace = true, features = ["axum", "vendored"] }
utoipa-swagger-ui-vendored = { workspace = true }
validator = { workspace = true, features = ["derive"] }
workspace-hack = { version = "0.1.0", path = "../../crates/workspace-hack" }

[dev-dependencies]
http-body-util = "0.1.3"
serde_json = { workspace = true }
tower = { workspace = true, features = ["util"] }
