[package]
name = "events"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
axum = { workspace = true }
chrono = { workspace = true }
cqrs = { path = "../../crates/cqrs" }
sqlx = { workspace = true, features = ["sqlite", "migrate", "runtime-tokio-rustls"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
ulid = { workspace = true }
