[package]
name = "events"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
axum = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true, features = ["sqlite", "migrate", "runtime-tokio-rustls"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
ulid = { workspace = true }
workspace-hack = { version = "0.1.0", path = "../../crates/workspace-hack" }
