[package]
name = "steersman"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
pingora = { workspace = true, features = ["proxy"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
workspace-hack = { version = "0.1.0", path = "../../crates/workspace-hack" }
