[package]
name = "todo"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
nexus = { path = "../../crates/nexus" }
nexus-rusqlite = { path = "../../crates/nexus-rusqlite" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
workspace-hack = { version = "0.1.0", path = "../../crates/workspace-hack" }
