[package]
name = "nexus-fjall"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Fjall-backed event store adapter for the Nexus event-sourcing framework"
readme = "../../README.md"
keywords = ["event-sourcing", "event-store", "fjall", "embedded"]
categories = ["database"]

[features]
snapshot = ["nexus-store/snapshot"]
export = ["nexus-store/export"]
import = ["nexus-store/import"]

[dependencies]
arrayvec = { workspace = true }
bytes = { workspace = true }
fjall = { workspace = true }
futures.workspace = true
nexus = { version = "0.1.0", path = "../nexus" }
nexus-store = { version = "0.1.0", path = "../nexus-store", features = ["subscription"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
criterion = { workspace = true }
insta = { workspace = true }
# Self dev-dependency: enables the `export`/`import` features for the crate's
# own test + bench builds so the feature-gated impls and tests below actually
# run under the default-feature `nix flake check` gate (which builds with
# default features only). Same unification trick `nexus-store` uses for its
# testing/export/import/cbor tests. `cargo add` refuses a self-dependency, so
# this is a deliberate manual entry.
nexus-fjall = { path = ".", features = ["export", "import"] }
# Pulls the CBOR backup box (`nexus_store::cbor`) into the test build; `cbor`
# implies nexus-store's `export`+`import`, so the end-to-end round-trip tests
# can encode/decode chunks. Separate from the line above because `cbor` is a
# nexus-store feature, not a nexus-fjall one.
nexus-store = { path = "../nexus-store", features = ["cbor"] }
nexus-store-testing = { version = "0.1.0", path = "../nexus-store-testing" }
proptest = { workspace = true }
proptest-state-machine = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[[bench]]
name = "fjall_benchmarks"
harness = false

[lints]
workspace = true
