[package]
name = "nexus-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.106", features = ["span-locations"] }
quote = "1.0.45"
syn = { version = "2.0.117", features = ["extra-traits", "parsing", "derive"] }
workspace-hack = { version = "0.1.0", path = "../workspace-hack" }

[dev-dependencies]
nexus = { path = "../nexus", features = ["derive"] }
