[package]
name = "nexus-rusqlite"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
nexus = { path = "../nexus", features = ["derive"] }
refinery = { workspace = true, features = ["rusqlite"] }
rusqlite = { workspace = true, features = ["bundled", "trace", "uuid", "chrono"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync"] }
tokio-stream = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v7"] }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
async-trait = { workspace = true }
futures = "0.3.31"
proptest = "1.7.0"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
