[package]
name = "nexus-store-testing"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Reusable trait conformance suites for nexus-store adapters"
readme = "../../README.md"
keywords = ["event-sourcing", "testing", "conformance"]
categories = ["data-structures", "development-tools::testing"]

[dependencies]
futures.workspace = true
nexus = { version = "0.1.0", path = "../nexus" }
nexus-store = { version = "0.1.0", path = "../nexus-store" }
tokio = { workspace = true, features = ["macros", "rt"] }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[lints]
workspace = true
