[package]
name = "nexus-store"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Event store edge layer for the Nexus event-sourcing framework"
readme = "../../README.md"
keywords = ["event-sourcing", "event-store", "cqrs", "persistence"]
categories = ["data-structures"]

[features]
testing = ["dep:tokio"]

[dependencies]
nexus = { version = "0.1.0", path = "../nexus" }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"], optional = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
static_assertions = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
trybuild = { version = "1", features = ["diff"] }

[[bench]]
name = "store_bench"
harness = false

[lints]
workspace = true
