[package]
name = "nexus-store"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Event store edge layer for the Nexus event-sourcing framework"
readme = "../../README.md"
keywords = ["event-sourcing", "event-store", "cqrs", "persistence"]
categories = ["data-structures"]

[features]
testing = ["dep:tokio"]
serde = ["dep:serde"]
json = ["serde", "dep:serde_json"]
snapshot = []
snapshot-json = ["snapshot", "json"]
projection = []
projection-json = ["projection", "json"]
bytemuck = ["dep:bytemuck"]
rkyv = ["dep:rkyv"]
# Retired feature, kept as no-op until Task 6 removes the lingering
# #[cfg(feature = "futures-bridge")] gates in stream/*. Deleting the
# feature now would emit `unexpected_cfgs` warnings that fail clippy
# `--deny warnings`. See deviations doc.
futures-bridge = []

[dependencies]
aligned-vec = { workspace = true }
arrayvec = { workspace = true }
bytemuck = { workspace = true, optional = true }
bytes = { workspace = true }
futures = { workspace = true }
futures-core = { workspace = true }
nexus = { version = "0.1.0", path = "../nexus" }
rkyv = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"], optional = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
criterion = { workspace = true }
futures = { workspace = true }
nexus-store = { path = ".", features = ["testing"] }
nexus-store-testing = { version = "0.1.0", path = "../nexus-store-testing" }
proptest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
static_assertions = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
trybuild = { version = "1", features = ["diff"] }

[[bench]]
name = "store_bench"
harness = false

[lints]
workspace = true
