[package]
name = "nexus-store"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Event store edge layer for the Nexus event-sourcing framework"
readme = "../../README.md"
keywords = ["event-sourcing", "event-store", "cqrs", "persistence"]
categories = ["data-structures"]

[features]
# Per-stream subscription wake path (`notify` module). Pulls `tokio` (for its
# `Notify` sync primitive), `foldhash` (fast hot-path hasher), and `parking_lot`
# (sync `Mutex` lockable from the drop-guard's `Drop`). Adapter crates that
# implement `WakeSource` enable this; pure event-sourcing users
# (repository/codec/wire only) build with no tokio dependency at all.
subscription = ["dep:tokio", "dep:foldhash", "dep:parking_lot"]
# `testing` ships `InMemoryStore`, whose subscription cursor uses the wake
# registry, so it implies `subscription`.
testing = ["subscription"]
serde = ["dep:serde"]
json = ["serde", "dep:serde_json"]
snapshot = []
snapshot-json = ["snapshot", "json"]
projection = []
projection-json = ["projection", "json"]
# Export/import contract (issue #145). The trait/type surface only — no new
# deps. The default CBOR box (a later card) lands behind a separate `cbor`
# feature that will imply both.
export = []
import = []
bytemuck = ["dep:bytemuck"]
rkyv = ["dep:rkyv"]
# Retired feature, kept as no-op until Task 6 removes the lingering
# #[cfg(feature = "futures-bridge")] gates in stream/*. Deleting the
# feature now would emit `unexpected_cfgs` warnings that fail clippy
# `--deny warnings`. See deviations doc.
futures-bridge = []
# Default CBOR backup box (issue #145, Card 3). Implies export+import; the
# inverse never holds (Agency enables export/import and brings its own CESR box,
# pulling no CBOR).
cbor = ["import", "export", "dep:minicbor", "dep:crc32c"]

[dependencies]
aligned-vec = { workspace = true }
arrayvec = { workspace = true }
bytemuck = { workspace = true, optional = true }
bytes = { workspace = true }
crc32c = { workspace = true, optional = true }
foldhash = { workspace = true, optional = true }
futures = { workspace = true }
futures-core = { workspace = true }
minicbor = { workspace = true, features = ["derive"], optional = true }
nexus = { version = "0.1.0", path = "../nexus" }
parking_lot = { workspace = true, optional = true }
rkyv = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"], optional = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
criterion = { workspace = true }
futures = { workspace = true }
insta = { workspace = true }
nexus-store = { path = ".", features = ["testing", "export", "import", "cbor"] }
nexus-store-testing = { version = "0.1.0", path = "../nexus-store-testing" }
proptest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
static_assertions = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
trybuild = { version = "1", features = ["diff"] }

[[bench]]
name = "store_bench"
harness = false

[lints]
workspace = true
