[package]
name = "nexus-test-helpers"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
nexus = { path = "../nexus", features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
workspace-hack = { version = "0.1", path = "../workspace-hack" }
