[package]
name = "nexus-test-helpers"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
fake = { workspace = true, features = ["derive", "email_address"] }
nexus = { path = "../nexus", features = ["testing"] }
serde = { workspace = true, features = ["derive"] }
workspace-hack = { version = "0.1", path = "../workspace-hack" }
