[package]
name = "nexus"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
downcast-rs = { workspace = true }
fake = { workspace = true, features = ["derive", "email_address"], optional = true }
nexus-macros = { version = "0.1.0", path = "../nexus-macros", optional = true }
serde = { workspace = true, features = ["derive"] }
smallvec = { workspace = true }
thiserror = { workspace = true }
tokio-stream = { workspace = true }
tower = { workspace = true, features = ["util"] }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v7", "fast-rng", "serde", "v4"] }
workspace-hack = { version = "0.1.0", path = "../workspace-hack" }

[dev-dependencies]
nexus-macros = { version = "0.1.0", path = "../nexus-macros" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[features]
default = []
derive = ["dep:nexus-macros"]
testing = ["dep:fake", "derive"]
