[package]
name = "nexus"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "A zero-compromise event-sourcing and CQRS kernel for Rust with maximum compile-time type safety"
readme = "README.md"
keywords = ["event-sourcing", "cqrs", "ddd", "aggregate", "domain-driven-design"]
categories = ["data-structures"]

[dependencies]
nexus-macros = { version = "0.1.0", path = "../nexus-macros", optional = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
criterion = { workspace = true }
nexus-macros = { version = "0.1.0", path = "../nexus-macros" }
proptest = { workspace = true }
static_assertions = { workspace = true }
thiserror = { workspace = true }
trybuild = "1"

[features]
default = []
derive = ["dep:nexus-macros"]

[[bench]]
name = "kernel_bench"
harness = false

[lints]
workspace = true
