[package]
name = "nexus"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "A zero-compromise event-sourcing and CQRS kernel for Rust with maximum compile-time type safety"
readme = "README.md"
keywords = ["event-sourcing", "cqrs", "ddd", "aggregate", "domain-driven-design"]
categories = ["data-structures"]

[dependencies]
arrayvec = { workspace = true }
nexus-macros = { version = "0.1.0", path = "../nexus-macros", optional = true }
thiserror = { workspace = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
criterion = { workspace = true }
# Self dev-dependency enabling the test-only features, so the default-feature
# `nix flake check` nextest run compiles and exercises the `testing` fixture
# tests via Cargo feature unification (mirrors nexus-store's pattern). Without
# this, the gate runs default features only and skips the fixture entirely.
nexus = { version = "0.1.0", path = ".", features = ["testing", "derive"] }
nexus-macros = { version = "0.1.0", path = "../nexus-macros" }
proptest = { workspace = true }
static_assertions = { workspace = true }
thiserror = { workspace = true }
trybuild = "1"

[features]
default = []
derive = ["dep:nexus-macros"]
testing = []

[[bench]]
name = "kernel_bench"
harness = false

[lints]
workspace = true
