[package]
name = "pawz"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
axum = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["net"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
workspace-hack = { version = "0.1.0", path = "../workspace-hack" }
serde = { workspace = true, features = ["derive"]}


[dev-dependencies]
serde_json = { workspace = true }
