[package]
name = "workspace-hack"
version = "0.1.0"
description = "workspace-hack package, managed by hakari"
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

# The parts of the file between the BEGIN HAKARI SECTION and END HAKARI SECTION comments
# are managed by hakari.

### BEGIN HAKARI SECTION
[dependencies]
num-traits = { version = "0.2" }
serde = { version = "1", features = ["alloc", "derive"] }

[build-dependencies]
num-traits = { version = "0.2" }
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = { version = "1" }
serde = { version = "1", features = ["alloc", "derive"] }
syn = { version = "2", features = ["extra-traits", "full"] }

### END HAKARI SECTION
