[package]
name = "workspace-hack"
version = "0.1.0"
description = "workspace-hack package, managed by hakari"
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

# The parts of the file between the BEGIN HAKARI SECTION and END HAKARI SECTION comments
# are managed by hakari.

### BEGIN HAKARI SECTION
[dependencies]
num-traits = { version = "0.2" }
once_cell = { version = "1" }
serde = { version = "1", features = ["alloc", "derive", "rc"] }
serde_core = { version = "1", default-features = false, features = ["alloc", "rc", "result", "std"] }
trybuild = { version = "1", default-features = false, features = ["diff"] }
zerocopy = { version = "0.8", default-features = false, features = ["derive", "simd"] }

[build-dependencies]
num-traits = { version = "0.2" }
once_cell = { version = "1" }
proc-macro2 = { version = "1", features = ["span-locations"] }
serde = { version = "1", features = ["alloc", "derive", "rc"] }
serde_core = { version = "1", default-features = false, features = ["alloc", "rc", "result", "std"] }
syn = { version = "2", features = ["extra-traits", "full"] }
trybuild = { version = "1", default-features = false, features = ["diff"] }
zerocopy = { version = "0.8", default-features = false, features = ["derive", "simd"] }

[target.x86_64-unknown-linux-gnu.dependencies]
getrandom = { version = "0.3", default-features = false, features = ["std"] }
libc = { version = "0.2" }

[target.x86_64-unknown-linux-gnu.build-dependencies]
getrandom = { version = "0.3", default-features = false, features = ["std"] }
libc = { version = "0.2" }

### END HAKARI SECTION
